Took some parts apart, so i think i am able to turn this into a seperate package instead of an template :)

--- a/BetterPages/Views/Main/Test2.cshtml
+++ b/BetterPages/Views/Main/Test2.cshtml
@@ -19,7 +19,7 @@ var interval = setInterval(function() {
     for (var i = 0; i < 10; i++)
         text += possible.charAt(Math.floor(Math.random() * possible.length));
 
-    document.getElementById("test2").innerText = text;
+    document.getElementById("test").innerText = text;
 }, 1000);
 
 BetterPages.mainBeforeLoad = () =>{
