--- a/BetterPages.example/Views/Shared/_Layout.cshtml
+++ b/BetterPages.example/Views/Shared/_Layout.cshtml
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
     <title>BetterPages</title>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
 </head>
-<body>
+<body onload="InitBetterPages()">
 
 
 
